package Ejercicio_09;

public abstract class RegimenTenencia {
}